syntax = "proto3";

package cart;

import "google/protobuf/timestamp.proto";

// ----------- MESSAGE DEFINITIONS ------------

message CartItem {
  string cartId = 1;
  string productId = 2;
  int32 quantity = 3;
  double unitPrice = 4;
  double subTotal = 5;
}

message Cart {
  string id = 1;
  string username = 2;
  double total = 3;
  google.protobuf.Timestamp modifiedAt = 4;
  repeated CartItem items = 5;
}

// ----------- REQUEST / RESPONSE DEFINITIONS ------------

message CartItemInput {
  string productId = 1;
  int32 quantity = 2;
  double unitPrice = 3;
}

message AddToCartRequest {
  string username = 1;
  repeated CartItemInput items = 2;
}

message CheckoutRequest {
  string username = 1;
}

message RemoveFromCartRequest {
  string username = 1;
  string productId = 2;
}

message UsernameRequest {
  string username = 1;
}

message CartResponse {
  int32 status = 1;
  string message = 2;
  Cart cart = 3;
}

message EmptyCartResponse {
  int32 status = 1;
  string message = 2;
  string content = 3;
}

// ----------- SERVICE DEFINITIONS ------------

service CartService {
  rpc GetCart(UsernameRequest) returns (CartResponse);
  rpc AddToCart(AddToCartRequest) returns (CartResponse);
  rpc Order(CheckoutRequest) returns (CartResponse);
}
